--- a/docs/software/training/control-theory.mdx
+++ b/docs/software/training/control-theory.mdx
@@ -2,10 +2,21 @@
 title: Control Theory
 description: An overview of control theory principles applied to FRC robots. This includes concepts such as feedback loops, PID control, and system dynamics.
 hide_table_of_contents: true
-sidebar_position: 9
 unlisted: true
+sidebar_position: 9
 ---
 
-# WIP
+# Control Theory
+Control theory is a branch of engineering and mathematics that deals with the behavior of dynamical systems. The main goal of control theory is to develop models and strategies to influence the behavior of these systems to achieve desired outcomes. In the context of FRC robotics, control theory is essential for designing systems that can respond accurately and efficiently to changing conditions on the field. In this module, we will explore some fundamental concepts of control theory that are relevant to FRC robots.
 
+# Presentation
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTMq41unK0_CHxglAA-61hPvOtg72D5kyDtUtFzfjjOwKXZty6YWlCi6mc7PGsWaZ9VTbDWWyz_Koon/pubembed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+
+# Exercises
+
+# Related Documentation
+# Controls
+- [Control Types](../controls/system-control/control-types.mdx): Basic overview of control loop types and vocabulary
+- [Feed Forward](../controls/system-control/feed-fwd.mdx)
+- [Bang Bang Controller](../controls/system-control/bang-bang.mdx)
+- [PID Controller](../controls/system-control/pid.mdx)
