Grammar and Spell Check

--- a/docs/software/comms/pwm.mdx
+++ b/docs/software/comms/pwm.mdx
@@ -8,7 +8,7 @@ import pwm from '@site/static/img/software/comms/pwm/pwm.jpg';
 
 # Pulse Width Modulation
 PWM or Pulse Width Modulation is a unidirectional communication method that allows the communication of a single analog 
-value between devices. It acts as a digital pulse where the width of the pulse is varied between no pulse all they way 
+value between devices. It acts as a digital pulse where the width of the pulse is varied between no pulse all the way 
 to a continuous pulse at a given frequency. 
 
 <img src={pwm} width="500" style={{backgroundColor: 'white', padding: '10px', borderRadius: '8px', display: 'block', marginTop: '10px'}}/>
