--- a/docs/software/controls/system-control/control-types.mdx
+++ b/docs/software/controls/system-control/control-types.mdx
@@ -19,7 +19,7 @@ Control theory is a branch of engineering and mathematics that deals with the be
 
         Setpoint:::highlight
     ```
-- **Computer/Controller**: Primary control unit for the system. Performs all calculations for desired command based of the requested setpoint.
+- **Computer/Controller**: Primary control unit for the system. Performs all calculations for desired command based on the requested setpoint.
     ```mermaid
     stateDiagram-v2
         direction LR
