--- a/docs/software/java/methods.mdx
+++ b/docs/software/java/methods.mdx
@@ -10,7 +10,7 @@ If you haven't picked it up by now programmers are **very very** lazy. If we hav
 or could be repeated if template-able we can use a method. Methods are a block of code that perform a specific task or
 a set of actions. They can help to reduce code duplication, improve readability, and make our code more organized.
 Methods can be called from anywhere in our code, allowing us to re-use the same code multiple times without having to
-write it out again. They are a fundamental concept in [object-oriented programming](./classes-objs.mdx) Methods are
+write it out again. They are a fundamental concept in [object-oriented programming](./classes-objs.mdx). Methods are
 also called functions, procedures, or subroutines in other programming languages.
 
 ---
@@ -28,8 +28,8 @@ returnType methodName(){
 ```
 - `returnType`: Datatype of the value the method with return
     - For simple examples imagine the return type as `void`. This means there is nothing returned.
-- `methodName`: This can be anything similar to a variable name. Try to name your methods based off what actions they
-preform.
+- `methodName`: This can be anything similar to a variable name. Try to name your methods based on what actions they
+perform.
 - `method code`: This will be the code that runs when your method is "called".
 
 Below is an example of a simple method.
