--- a/docs/software/robot_dev/testing.mdx
+++ b/docs/software/robot_dev/testing.mdx
@@ -12,7 +12,7 @@ import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
 # Robot Testing
-Obviously once our code it written and builds we need to test it to make sure it works as expected.
+Obviously once our code is written and builds, we need to test it to make sure it works as expected.
 Testing can be done both on the physical robot as well as in simulation.
 Each has its own advantages and disadvantages.
 
