--- a/docs/software/robot_dev/wpilib.mdx
+++ b/docs/software/robot_dev/wpilib.mdx
@@ -15,7 +15,7 @@ Also refer to the [WPILib Javadocs](https://github.wpilib.org/allwpilib/docs/rel
 
 ## Geometry Types
 One important aspect of robot programming is handling geometry and spatial relationships. WPILib provides several classes to represent geometric concepts such as points, vectors, and poses.
-Computations involving these geometry types are essential for tasks like navigation, path planning, and kinematics and then can tend to get complex quickly.
+Computations involving these geometry types are essential for tasks like navigation, path planning, and kinematics, and they can tend to get complex quickly.
 It is recommended to look at the [WPILib documentation](https://docs.wpilib.org/en/stable/docs/software/advanced-controls/geometry/pose.html) for more details on how to use these classes effectively.
 - [Translation](https://github.wpilib.org/allwpilib/docs/release/java/edu/wpi/first/math/geometry/Translation2d.html): Represents a point or vector in 2D space with x and y coordinates.
 - [Rotation](https://github.wpilib.org/allwpilib/docs/release/java/edu/wpi/first/math/geometry/Rotation2d.html): Represents a rotation in 2D space around the origin.
@@ -28,9 +28,9 @@ These geometry types also have a 3D counterpart (Translation3d, Rotation3d, Pose
 ---
 
 ## Command-Based Programming
-WPILib provides a command-based programming framework that helps organize robot code into modular commands. This are very powerful and allow for easy scheduling and execution of robot actions.
+WPILib provides a command-based programming framework that helps organize robot code into modular commands. These are very powerful and allow for easy scheduling and execution of robot actions.
 However, unless implemented carefully, they can lead to complex interdependencies and make debugging more difficult.
-We have choosen to reduce our use of commands and keep behaviors more directly implemented in subsystems where possible.
+We have chosen to reduce our use of commands and keep behaviors more directly implemented in subsystems where possible.
 If you are interested in learning more about commands and how to use them effectively, refer to the [Command-Based Programming documentation](https://docs.wpilib.org/en/stable/docs/software/commandbased/index.html)
 and the [Commands](./commands.mdx) page in this documentation.
 
