--- a/docs/software/tools/elastic.mdx
+++ b/docs/software/tools/elastic.mdx
@@ -22,7 +22,7 @@ and [Shuffleboard](https://docs.wpilib.org/en/stable/docs/software/dashboards/sh
 
 ## Widgets
 Elastic can see any data published on NetworkTables similar to how SmartDashboard and Shuffleboard worked. You can then
-add any of these topics to your Elastic windows and they will auto determine their widget type based of the datatype of
+add any of these topics to your Elastic windows and they will auto determine their widget type based on the datatype of
 the topic. Some topics like numbers or string can be assigned to multiple different types of widgets.
 
 - To add a widget you can click `+ Add Widget` on the top toolbar and it will open a list of topics. All you need to do
