--- a/docs/software/tools/hw-config.mdx
+++ b/docs/software/tools/hw-config.mdx
@@ -73,7 +73,7 @@ different tabs to see the unique setup instructions for each.
     Tuner X and connect over the robot network to see all the CTRE devices on the RIO or CANivore CAN bus.
 
     CTRE provides excellent documentation for interfacing with their devices over the tool and how to set it up. Below
-    are some quick links to the more common actions you would preform in Tuner X, but you can also see their entire
+    are some quick links to the more common actions you would perform in Tuner X, but you can also see their entire
     documentation [here](https://v6.docs.ctr-electronics.com/en/stable/docs/tuner/index.html)
     - [How to Connect using Tuner X](https://v6.docs.ctr-electronics.com/en/stable/docs/tuner/connecting.html)
     - [Device List Overview](https://v6.docs.ctr-electronics.com/en/stable/docs/tuner/device-list.html)
@@ -103,7 +103,7 @@ different tabs to see the unique setup instructions for each.
     same CAN bus as the device you plugged into.
 
     REV provides documentation for interfacing with their devices over the tool and how to set it up. Below are some
-    quick links to the more common actions you would preform in the REV Hardware Client, but you can also see their
+    quick links to the more common actions you would perform in the REV Hardware Client, but you can also see their
     entire documentation [here](https://docs.revrobotics.com/rev-hardware-client)
     - [How to Connect using REV Hardware Client](https://docs.revrobotics.com/rev-hardware-client/gs/navigation#no-hardware-detected)
     - [Device List Overview](https://docs.revrobotics.com/rev-hardware-client/gs/navigation#device-menu)
