--- a/docs/software/tools/vscode.mdx
+++ b/docs/software/tools/vscode.mdx
@@ -27,7 +27,7 @@ changes. You can then push your changes to the remote repository by clicking on 
 Be careful when using the `Sync Changes` button, as it will pull changes from the remote repository and merge them with
 your local changes. If there are any conflicts, you will need to resolve them before you can push your changes.
 
-It is recommended you avoid the `Sync Changes` button because it can preform something you are not expecting. It is
+It is recommended you avoid the `Sync Changes` button because it can perform something you are not expecting. It is
 best practice to explicitly select the ***Push*** or ***Pull*** option from the submenu.
 :::
 
