--- a/docs/software/training/mechanisms-subsystems.mdx
+++ b/docs/software/training/mechanisms-subsystems.mdx
@@ -1,6 +1,6 @@
 ---
 title: Mechanisms and Subsystems
-description: An overview of mechanisms and subsystems used in FRC robots. This is a unique approach compare to the traditional subsystem-based design, focusing on modular and reusable components.
+description: An overview of mechanisms and subsystems used in FRC robots. This is a unique approach compared to the traditional subsystem-based design, focusing on modular and reusable components.
 hide_table_of_contents: true
 sidebar_position: 7
 ---
