--- a/docs/software/training/methods.mdx
+++ b/docs/software/training/methods.mdx
@@ -1,6 +1,6 @@
 ---
 title: Methods
-description: This is a into to using and creating methods.
+description: This is an intro to using and creating methods.
 hide_table_of_contents: true
 sidebar_position: 4
 ---
