--- a/docs/software/training/oop-wpilib.mdx
+++ b/docs/software/training/oop-wpilib.mdx
@@ -1,6 +1,6 @@
 ---
 title: OOP and WPILib
-description: This is a into to using and creating methods.
+description: This is an intro to Object Oriented Programming and WPILib.
 hide_table_of_contents: true
 sidebar_position: 5
 ---
