--- a/docs/software/vision/obj_det.mdx
+++ b/docs/software/vision/obj_det.mdx
@@ -41,8 +41,8 @@ Over the past few years we have used several different deep learning models for 
 The You Only Look Once (YOLO) family of models are a series of real-time object detection models that are
 designed to be fast and accurate. YOLO models work by dividing the input image into a grid and predicting bounding boxes
 and class probabilities for each grid cell. This allows the model to detect multiple objects in a single pass through
-the network, making it much faster than traditional object detection methods. This is the model architecture we have selected,
-for the 2024, and 2025 seasons, due to its speed and accuracy.
+the network, making it much faster than traditional object detection methods. This is the model architecture we have selected
+for the 2024 and 2025 seasons, due to its speed and accuracy.
 
 ### Model Training
 For our deep learning models, we use a two step process to train the models. First we create a dataset in 
