--- a/docs/software/java/conditions.mdx
+++ b/docs/software/java/conditions.mdx
@@ -6,19 +6,19 @@ sidebar_position: 3
 ---
 
 # Conditions
-Conditions are fundamental to programming. They allow us to preform certain actions based of the state of a program. A
+Conditions are fundamental to programming. They allow us to perform certain actions based on the state of a program. A
 condition is defined as a comparison between two values using a comparison operator and enclosed in `()`.
 
 ---
 
 ## Comparison Operators
-These operators allow us to compare two values together. Similar to our arithmetic operators you need to think about
-what comparing two datatypes mean. You can't use create a condition that compares `"hello"` and `5` because is there is
-logical comparison between a `String` and an `int`. As stated above a condition in java is defined as comparison
+These operators allow us to compare two values together. Similar to our arithmetic operators, you need to think about
+what comparing two datatypes means. You can't create a condition that compares `"hello"` and `5` because there is no
+logical comparison between a `String` and an `int`. As stated above, a condition in Java is defined as a comparison
 between two values using a comparison operator. The condition must be encompassed in `()`. The syntax for that would
 look like `([value] [comparison] [value])`.
 
-The are a few comparison operators each with their own behavior. Below is a table that shows the available comparison
+There are a few comparison operators each with their own behavior. Below is a table that shows the available comparison
 operators, a brief description of their function, and a code based example.
 <table>
 <tr>
@@ -76,10 +76,10 @@ operators, a brief description of their function, and a code based example.
 ---
 
 ## Logical Operators
-What if we want to make a compound condition? Compare if one conditions is true and another false? Both true? Luckily
-our pal [George Boole](https://en.wikipedia.org/wiki/George_Boole) had us in mind when he crated the concept called
-[boolean algebra](https://en.wikipedia.org/wiki/Boolean_algebra) The fundamentals of boolean logic is three logical
-operator **NOT**, **AND**, and **OR**. Below are some "truth tables" which show the boolean output of comparing
+What if we want to make a compound condition? Compare if one condition is true and another false? Both true? Luckily
+our pal [George Boole](https://en.wikipedia.org/wiki/George_Boole) had us in mind when he created the concept called
+[boolean algebra](https://en.wikipedia.org/wiki/Boolean_algebra). The fundamentals of boolean logic are three logical
+operators: **NOT**, **AND**, and **OR**. Below are some "truth tables" which show the boolean output of comparing
 conditions using those logical operators.
 
 <div style={{ display: 'flex', flexWrap: 'wrap', justifyContent: 'center', gap: 20, fontSize: 15}}>
@@ -218,10 +218,10 @@ if(number == 0){
 ---
 
 ## Ternary Operator
-Programmers are lazy. Sometimes even too lazy to write an `if`-`else` statement for a simple condition, that preforms a
+Programmers are lazy. Sometimes even too lazy to write an `if`-`else` statement for a simple condition, that performs a
 very small action. Thats why they created the ternary operator `?`. The ternary operator can be added to the end of a
 condition and allow for quick one line `if-else` statements. The syntax for using it is as follows. `(condition)? <code
-if true> : <code if false>;` A quick example show its power can be seen below.
+if true> : <code if false>;` A quick example showing its power can be seen below.
 ```java
 // Traditional if-else statement
 if (is_button_pressed){
@@ -237,7 +237,7 @@ if (is_button_pressed){
 ---
 
 ## Switch Statement
-Programmers are **very** lazy. If I have a bunch of values I want to compare to for a variable and preform specific
+Programmers are **very** lazy. If I have a bunch of values I want to compare to for a variable and perform specific
 code for each value it would be painful to write 15 `if` or `if`-`else if` statements. Thankfully we can use a switch
 statement. It will allow you to provide and single expression for comparison and then easily create a case for
 different each value it can take on. This is the basic syntax structure:
@@ -311,7 +311,7 @@ Thursday
 :::
 :::tip Combining Cases
 Sometimes you can use the waterfall concept to your advantage if we have multiple values the expression can take, but
-want it to preform the same action.
+want it to perform the same action.
 ```java
 switch (month){
     case "December":
