--- a/docs/software/java/operators.mdx
+++ b/docs/software/java/operators.mdx
@@ -6,14 +6,14 @@ sidebar_position: 2
 ---
 
 # Operators
-Operators are symbols used to preform data manipulation and assignment. They allow us to preform math with our
-variables and change what values are stored in them. Operators only work with a specific types. For examples you cant
-multiple a `String`.
+Operators are symbols used to perform data manipulation and assignment. They allow us to perform math with our
+variables and change what values are stored in them. Operators only work with specific types. For example, you can't
+multiply a `String`.
 
 ---
 
 ## Arithmetic
-Arithmetic operators allow us to preform math operations with variables and numbers. Below is a list of the basic
+Arithmetic operators allow us to perform math operations with variables and numbers. Below is a list of the basic
 operators. You can see most operators are compatible with all number datatypes, but `String` is only compatible with
 the `+` operator. They should all do what you expect from your 2nd grade math class. The only thing that may be unique
 is the modulo operator `%`. This is used to calculate the remainder of dividing two numbers.
@@ -90,7 +90,7 @@ is the modulo operator `%`. This is used to calculate the remainder of dividing 
 </table>
 
 :::warning Data truncation
-Be careful when preforming math between and an `int` and a `double`. You can not store decimal precision data in an
+Be careful when performing math between an `int` and a `double`. You cannot store decimal precision data in an
 `int` datatype. Any decimal precision will be truncated.
 ```java
 int i = 5;
