--- a/docs/software/java/vars-dt.mdx
+++ b/docs/software/java/vars-dt.mdx
@@ -25,7 +25,7 @@ When naming a variable try to stick to the team naming standard. For a typical v
 which is shown in the example above.
 :::warning[Always assign a default value]
 It can be dangerous leaving a variable unassigned at creation. You may know that you can't read it until it has a
-value, but if other developers are unaware and may read from it before its assigned. This can cause the code to error
+value, but if other developers are unaware and may read from it before it's assigned. This can cause the code to error
 or crash.
 :::
 
